Revert direction on actionMenus to LTR, while maintaining RTL styling for the submenu items, so the drop-down menus don't appear off-screen. Fixes #9651
svn path=/plonetheme.sunburst/trunk/; revision=30817

--- a/plonetheme/sunburst/skins/plonetheme_sunburst_styles/RTL.css
+++ b/plonetheme/sunburst/skins/plonetheme_sunburst_styles/RTL.css
@@ -61,6 +61,15 @@
     margin: auto;
 }
 
+dl.actionMenu.activated {
+    direction: ltr;
+}
+dl.actionMenu.activated dt {
+    direction: rtl;
+}
+dd.actionMenuContent ul {
+    direction: rtl;
+}
 
 /*                                            RTL overides of columns.css */
 
